5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4254/executions/1674_1100.log
== TEST (2019-04-24 22:31:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input("Digite o valor da cedula: "))

if(v!=2 or v!=5 or v!=10 or v!=20 or v!=50 or v!=100):
	print("Entrada: ", v)
	print("Animal: Invalido")
elif(v == 2):
	print("Entrada: ", v)
	print("Animal: Tartaruga")
elif(v == 5):
	print("Entrada: ", v)
	print("Animal: Garca")
elif(v == 10):
	print("Entrada: ", v)
	print("Animal: Arara")
elif(v == 20):
	print("Entrada: ", v)
	print("Animal: Mico-leao-dourado")
elif(v == 50):
	print("Entrada: ", v)
	print("Animal: Onca-pintada")
else(v == 100):
	print("Entrada: ", v)
	print("Animal: Garoupa")


-- ERROR:
File "XXXX", line 24
    else(v == 100):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 22:32:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input("Digite o valor da cedula: "))

if(v!=2 or v!=5 or v!=10 or v!=20 or v!=50 or v!=100):
	print("Entrada: ", v)
	print("Animal: Invalido")
elif(v == 2):
	print("Entrada: ", v)
	print("Animal: Tartaruga")
elif(v == 5):
	print("Entrada: ", v)
	print("Animal: Garca")
elif(v == 10):
	print("Entrada: ", v)
	print("Animal: Arara")
elif(v == 20):
	print("Entrada: ", v)
	print("Animal: Mico-leao-dourado")
elif(v == 50):
	print("Entrada: ", v)
	print("Animal: Onca-pintada")
elif(v == 100):
	print("Entrada: ", v)
	print("Animal: Garoupa")


-- OUTPUT:
Entrada:  100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 22:32:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input("Digite o valor da cedula: "))

if(v!=2 or v!=5 or v!=10 or v!=20 or v!=50 or v!=100):
	print("Entrada: ", v)
	print("Animal: Invalido")
elif(v == 2):
	print("Entrada: ", v)
	print("Animal: Tartaruga")
elif(v == 5):
	print("Entrada: ", v)
	print("Animal: Garca")
elif(v == 10):
	print("Entrada: ", v)
	print("Animal: Arara")
elif(v == 20):
	print("Entrada: ", v)
	print("Animal: Mico-leao-dourado")
elif(v == 50):
	print("Entrada: ", v)
	print("Animal: Onca-pintada")
elif(v == 100):
	print("Entrada: ", v)
	print("Animal: Garoupa")


-- OUTPUT:
Entrada:  100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 22:33:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input("Digite o valor da cedula: "))

if(v!=2 and v!=5 and v!=10 and v!=20 and v!=50 and v!=100):
	print("Entrada: ", v)
	print("Animal: Invalido")
elif(v == 2):
	print("Entrada: ", v)
	print("Animal: Tartaruga")
elif(v == 5):
	print("Entrada: ", v)
	print("Animal: Garca")
elif(v == 10):
	print("Entrada: ", v)
	print("Animal: Arara")
elif(v == 20):
	print("Entrada: ", v)
	print("Animal: Mico-leao-dourado")
elif(v == 50):
	print("Entrada: ", v)
	print("Animal: Onca-pintada")
elif(v == 100):
	print("Entrada: ", v)
	print("Animal: Garoupa")


-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 22:34:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input("Digite o valor da cedula: "))

if(v!=2 and v!=5 and v!=10 and v!=20 and v!=50 and v!=100):
	print("Entrada: ", v)
	print("Animal: Invalido")
elif(v == 2):
	print("Entrada: ", v)
	print("Animal: Tartaruga")
elif(v == 5):
	print("Entrada: ", v)
	print("Animal: Garca")
elif(v == 10):
	print("Entrada: ", v)
	print("Animal: Arara")
elif(v == 20):
	print("Entrada: ", v)
	print("Animal: Mico-leao-dourado")
elif(v == 50):
	print("Entrada: ", v)
	print("Animal: Onca-pintada")
elif(v == 100):
	print("Entrada: ", v)
	print("Animal: Garoupa")


-- EXECUTION TIME:
0.130038
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
